--- a/templates/finished.html
+++ b/templates/finished.html
@@ -6,9 +6,9 @@
 <div class="container-fluid text-center bg-white">
     <!--<p>{{ instrument }}</p>-->
     <!--<p>{{ grade }}</p>-->
-    <p>{{ scale }}</p>
-    <form action="/scales" method="post">
-        <button class="btn btn-primary" type="submit">Refresh Scale</button>
+    <p>That's all the scales for today, well done! Come back tomorrow!</p>
+    <form action="/" method="post">
+        <button class="btn btn-primary" type="submit">Home</button>
     </form>
 </div>
 {% endblock %}
