--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <div class="container-fluid text-center bg-white">
     <img class="" src="/static/scales.png" alt="Scales logo" style="max-width: 100%">
     <h1>Scales</h1>
-    <form action="/" method="post">
+    <form action="/redirecter" method="post">
         <h5>Select your instrument:</h5>
         <select name="instrument">
             <option disable selected value="">Select Instrument</option>
