Add more functionality

--- a/templates/finished.html
+++ b/templates/finished.html
@@ -4,8 +4,8 @@
 
 {% block body %}
 <div class="container-fluid text-center bg-white">
-    <!--<p>{{ instrument }}</p>-->
-    <!--<p>{{ grade }}</p>-->
+    <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
+    <br>
     <p>That's all the scales for today, well done! Come back tomorrow!</p>
     <form action="/" method="post">
         <button class="btn btn-primary" type="submit">Home</button>
