Add description for users

--- a/templates/finished.html
+++ b/templates/finished.html
@@ -7,7 +7,7 @@
     <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
     <br>
     <p>That's all the scales for today, well done! Come back tomorrow!</p>
-    <form action="/" method="post">
+    <form action="/" method="get">
         <button class="btn btn-primary" type="submit">Home</button>
     </form>
 </div>
