--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
 <div class="container-fluid text-center bg-white">
     <img class="" src="/static/scales.png" alt="Scales logo" style="max-width: 10%">
     <h2>Scales</h2>
+    <p>An app to help you when practicing scales.</p>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Select your Instrument and the Grade you are working on.</li>
+        <li class="list-group-item">You will be shown a random list of the scales required one at a time.</li>
+        <li class="list-group-item">Then all you do is hit 'Next Scale' once you have practiced the one being shown.</li>
+    </ul>
     <form action="/redirecter" method="post">
         <div class="container-fluid">
             <h5>Select your instrument:</h5>
