--- a/templates/scales.html
+++ b/templates/scales.html
@@ -7,9 +7,10 @@
     <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
     <p>Make sure you practice each scale at least 5 times in a row without a mistake!<br>Then click 'Next Scale'.</p>
     <br>
-    <div class="container-fluid">
-        <h5>{{ scale }}</h5>
+    <div class="container-fluid" style="max-width: 400px">
+        <h3>{{ scale }}</h3>
     </div>
+    <br>
     <form action="/scales" method="post">
         <button class="btn btn-primary" type="submit">Next Scale</button>
     </form>
