--- a/templates/finished.html
+++ b/templates/finished.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 
-{% block title %}Scales|Home{% endblock %}
+{% block title %}Scales|Finished{% endblock %}
 
 {% block body %}
-<div class="container-fluid text-center bg-white">
+<div class="container-fluid text-center bg-white margin-top-40">
     <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
     <br>
     <p>That's all the scales for today, well done! Come back tomorrow!</p>
-    <form action="/" method="get">
+    <form action="/" method="post">
         <button class="btn btn-primary" type="submit">Home</button>
     </form>
 </div>
