--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,17 +12,17 @@
     <title>Scales</title>
 </head>
 
-<body>
+<body style="margin-top:50px">
     {% block body %}{% endblock %}
     <div class="container-fluid" id="footer">
         <hr>
-        <p class="text-center"><i class="far fa-copyright"></i> E. Hazledine 2018 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/ed_hazledine" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
+        <p class="text-center"><a href="https://edhazledine.com">Back to edhazledine.com</a><br><i class="far fa-copyright"></i> E. Hazledine 2018 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/ed_hazledine" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-</body>
+</bodyst>
 
 </html>
