--- a/templates/finished.html
+++ b/templates/finished.html
@@ -3,7 +3,7 @@
 {% block title %}Scales|Finished{% endblock %}
 
 {% block body %}
-<div class="container-fluid text-center bg-white margin-top-40">
+<div class="container-fluid text-center bg-white">
     <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
     <br>
     <p>That's all the scales for today, well done! Come back tomorrow!</p>
