--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,20 +9,21 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
-    <title>Scales</title>
+    <title>Ed Hazledine: {% block title %}{% endblock %}</title>
 </head>
 
-<body style="margin-top:50px">
+<body>
+<a style="margin-left: 10px; margin-top: 10px" href="https://edhazledine.com">Home</a>
     {% block body %}{% endblock %}
     <div class="container-fluid" id="footer">
         <hr>
-        <p class="text-center"><a href="https://edhazledine.com">Back to edhazledine.com</a><br><i class="far fa-copyright"></i> E. Hazledine 2018 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/ed_hazledine" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
+        <p class="text-center"><i class="far fa-copyright"></i> E. Hazledine 2018 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/ed_hazledine" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-</bodyst>
+</body>
 
 </html>
