--- a/templates/scales.html
+++ b/templates/scales.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <script>const scales = {{ scales|tojson }};</script>
-<div class="container-fluid text-center bg-white margin-top-40">
+<div class="container-fluid text-center bg-white">
     <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
     <p>Make sure you practice each scale at least 5 times in a row without a mistake!<br>Then click 'Next Scale'.</p>
     <br>
