--- a/app/templates/scales.html
+++ b/app/templates/scales.html
@@ -1,25 +1,55 @@
 {% extends "base.html" %}
 
-{% block title %}Practice{% endblock %}
+{% block head %}
+{{ super() }}
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript">
+    $SCRIPT_ROOT = {{ request.script_root|tojson }};
+</script>
+{% endblock %}
 
+{% block title %}Practice{% endblock %}
+<!--
+
+-->
 {% block content %}
+<script type="text/javascript">
+    $(function() {
+        $('a#finished').bind('click', function() {
+            $.getJSON($SCRIPT_ROOT + '/practice/done', {
+                a: $('a[name="a"]').val()
+            });
+            return false;
+        });
+    });
+</script>
 <div class="container-fluid text-center bg-white">
     <script>const scales = {{ scales|tojson }};</script>
+    <!--<a href=# name="a">-->
     <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
-    <p>Make sure you practice each scale at least 5 times in a row without a mistake!<br>Then click 'Next Scale'.</p>
+    <div class="js-info">
+        <p>Make sure you practice each scale at least 5 times in a row without a mistake!<br>Then click 'Next Scale'.</p>
+    </div>
     <div class="container-fluid" style="max-width: 600px">
         <h3 class="js-current-scale">{{ scale }}</h3>
     </div>
     <br>
-    <form action="/practice" method="post">
-        <button class="btn btn-primary js-scale-submit" type="submit">Next Scale</button>
-    </form>
+    <div class="js-submit-button">
+        <form action="/practice" method="post">
+            <button class="btn btn-primary js-scale-submit" type="submit">Next Scale</button>
+        </form>
+    </div>
     <br>
     <a href="/" title="Home"><button class="btn btn-danger" type="submit">Home</button></a>
+    <p><a href="#" id="finished">SAVE</a></p>
 </div>
 {% endblock %}
 
 {%  block scripts %}
     <script src="{{ url_for('.static', filename='scales.js') }}"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript">
+        $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    </script>
     {{ super() }}
 {%  endblock %}
