--- a/app/templates/finished.html
+++ b/app/templates/finished.html
@@ -1,14 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Scales|Finished{% endblock %}
+{% block title %}Practice{% endblock %}
 
-{% block body %}
+{% block content %}
 <div class="container-fluid text-center bg-white">
-    <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
-    <br>
-    <p>That's all the scales for today, well done! Come back tomorrow!</p>
-    <form action="/" method="post">
-        <button class="btn btn-primary" type="submit">Home</button>
-    </form>
+    <h1>You're all done for today, come back tomorrow to practice again!</h1>
+    <p>You can check your profile <a href="{{ url_for('user', username=current_user.username) }}">here.</a></p>
 </div>
 {% endblock %}
