--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -14,8 +14,9 @@
                 {% endif %}
                 {% if user == current_user %}
                 <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+                <p>Completed: {{ user.completed }}</p>
                 {% endif %}
-            </td>
+             </td>
         </tr>
     </table>
 {% endblock %}
