--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 <div class="container-fluid text-center bg-white">
     <div class="row justify-content-center">
         <div class="col-sm-2">
-            <img class="" src="static/scales.png" alt="Scales logo" style="max-width: 100px">
+            <img class="" src="./static/scales.png" alt="Scales logo" style="max-width: 100px">
             <h2>Scales</h2>
         </div>
         <div class="col-sm-4">
