--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,12 +20,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('index') }}">Scales</a>
+                <a class="navbar-brand" href="{{ url_for('about') }}">Scales</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
-                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('login') }}">Login</a></li>
@@ -55,7 +52,7 @@
 
     <div class="container-fluid" id="footer">
         <hr>
-        <p class="text-center"><i class="far fa-copyright"></i> E. Hazledine 2018 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/ed_hazledine" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
+        <p class="text-center"><i class="far fa-copyright"></i> E. Hazledine 2019 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/ed_hazledine" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
     </div>
 {% endblock %}
 
