Update twitter handle

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
 
     <div class="container-fluid" id="footer">
         <hr>
-        <p class="text-center"><i class="far fa-copyright"></i> E. Hazledine 2019 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/ed_hazledine" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
+        <p class="text-center"><i class="far fa-copyright"></i> E. Hazledine 2019 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/edPython" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
     </div>
 {% endblock %}
 
