--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
                 <br>
                 <br>
                 <div class="container-fluid">
-                    <button class="btn btn-submit" type="submit">Submit</button>
+                    <button class="btn" type="submit">Submit</button>
                 </div>
             </form>
         </div>
