--- a/scales/templates/base.html
+++ b/scales/templates/base.html
@@ -1,62 +1,45 @@
-{% extends "bootstrap/base.html" %}
+<!DOCTYPE html>
+<html>
 
-{% block head %}
-    {{ super() }}
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Yet Another Report Generator">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <link rel="stylesheet" href="./static/styles.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-{% endblock %}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kranky&display=swap" rel="stylesheet">
 
-{% block title %}
-    {% if title %}Scales: {{ title }}{% else %}Welcome to Scales!{% endif %}
-{% endblock %}
+    <title>{% block title %}
+        {% if title %}Scales: {{ title }}{% else %}Welcome to Scales!{% endif %}
+        {% endblock %}</title>
 
-{% block navbar %}
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ url_for('about') }}">Scales</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_anonymous %}
-                    <li><a href="{{ url_for('login') }}">Login</a></li>
-                    {% else %}
-                    <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
-                    <li><a href="{{ url_for('logout') }}">Logout</a></li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
-{% endblock %}
+    {% block scripts %}
+    {% endblock %}
+</head>
 
-{% block content %}
-    <div class="container">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
 
-        {# application content needs to be provided in the app_content #}
-        {% block app_content %}{% endblock %}
-    </div>
+<body>
+    {% if request.endpoint != "about" %}
+    {% include "navbar.html" %}
+    {% endif %}
 
-    <div class="container-fluid" id="footer">
-        <hr>
-        <p class="text-center"><i class="far fa-copyright"></i> E. Hazledine 2019 <br><a href="https://github.com/edhaz" target="_blank"><i class="fab fa-github fa-2x" title="Github"></i></a>  <a href="https://twitter.com/edPython" target="_blank"><i class="fab fa-twitter fa-2x" title="Twitter"></i></a></p>
-    </div>
-{% endblock %}
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="w-64 mx-auto text-gray-800 m-3 px-3 py-2 rounded bg-blue-200 shadow text-center" role="alert">{{ message
+        }}</div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
 
-{% block scripts %}
-    {{ super() }}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 
+    {% include "footer.html" %}
+</body>
+
+</html>
