--- a/scales/templates/login.html
+++ b/scales/templates/login.html
@@ -2,30 +2,45 @@
 
 {% block title %}Sign In{% endblock %}
 
-{% block app_content %}
-    <h1>Sign In</h1>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
-    </form>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
-    <!--<p>
-        Forgot Your Password?
-        <!-- <a href="{# url_for('reset_password_request') #}">Click to Reset It</a>
-    </p>-->
-{% endblock %}
+{% block content %}
+<div class="container w-screen mx-auto mt-10">
+    <h1 class="text-3xl text-gray-800 font-bold text-center">Sign In</h1>
+    <div class="w-full max-w-xs m-auto">
+        <form action="" method="post" class="bg-white px-8 pt-6 pb-8 mb-4">
+            {{ form.csrf_token }}
+            <div class="mb-4">
+                {{ form.username.label(class_="block text-gray-700 text-sm font-bold mb-2") }}
+                {{ form.username(size=32, class_="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
+                leading-tight focus:outline-none focus:shadow-outline", placeholder="Username") }}
+                {% for error in form.username.errors %}
+                <p class="mt-3 text-red-500 text-xs italic">[{{ error }}]</p>
+                {% endfor %}
+            </div>
+            <div class="mb-6">
+                {{ form.password.label(class_="block text-gray-700 text-sm font-bold mb-2") }}
+                {{ form.password(size=32, class_="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
+                leading-tight focus:outline-none focus:shadow-outline", placeholder="******************") }}
+                {% for error in form.password.errors %}
+                <p class="mt-3 text-red-500 text-xs italic">{{ error }}</p>
+                {% endfor %}
+            </div>
+            <div class="flex items-center justify-between">
+                <button
+                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                    type="submit">
+                    Sign In
+                </button>
+                <p class="block text-gray-700 text-sm font-bold">
+                    {{ form.remember_me() }} {{ form.remember_me.label }}
+                </p>
+                <!-- <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
+                    Forgot Password?
+                </a> -->
+            </div>
+            <p class="block text-gray-700 text-sm font-bold mt-3 text-center">
+                New User? <a class="hover:text-blue-500" href="{{ url_for('register') }}">Register!</a>
+            </p>
+        </form>
+        </form>
+    </div>
+    {% endblock %}
