--- a/scales/templates/scales.html
+++ b/scales/templates/scales.html
@@ -1,49 +1,47 @@
 {% extends "base.html" %}
 
-{% block head %}
+{% block scripts %}
 {{ super() }}
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script type="text/javascript">
-    $SCRIPT_ROOT = {{ request.script_root|tojson }};
+<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+<script>
+    const scales = {{ scales| tojson }};
 </script>
+<script src="{{ url_for('.static', filename='scales.js') }}"></script>
 {% endblock %}
 
 {% block title %}Practice{% endblock %}
-{% block app_content %}
+{% block content %}
+
+{% raw %}
+<script id="scale-template" type="text/x-handlebars-template">
+    <div class="m-10">
+        <h2 class="font-bold text-3xl">{{scale.name}}</h2>
+        {{#if scale.arp }}
+        <p>Arpeggio</p>
+        {{else}}
+        <p>Scale</p>
+        {{/if}}
+        <p>{{scale.octaves}} octave{{#if (greaterThan scale.octaves 1)}}s{{/if}}</p>
+    </div>
+</script>
+{% endraw %}
 
 <div class="container-fluid text-center bg-white">
-    <script>const scales = {{ scales|tojson }};</script>
-    <script class="js-test">
-        $(function() {
-            $('a#finished').bind('click', function() {
-                $.getJSON($SCRIPT_ROOT + '/practice/done', {
-                    a: $('a[name="a"]').val()
-                });
-                //return false;
-            });
-        });
-    </script>
-    <h3><u>Grade {{ grade }} - {{ instrument }}</u></h3>
-    <div class="js-info">
-        <p>Make sure you practice each scale at least 5 times in a row without a mistake!<br>Then click 'Next Scale'.</p>
+    <h3 class="m-6 font-bold text-2xl">Grade {{ grade }} {{ instrument }}</h3>
+    <div class="max-w-lg mx-auto py-2 px-4 bg-blue-100 rounded-xl shadow-md">
+        <p>Make sure you practice each scale at least 5 times in a row without a mistake!</p>
+        <p>Then click 'Next Scale'.</p>
     </div>
-    <div class="container-fluid" style="max-width: 600px">
-        <h3 class="js-current-scale">{{ scale }}</h3>
+    <div id="scale">
+
     </div>
-    <br>
-    <div class="js-submit-button">
-        <form action="/practice" method="post">
-            <button class="btn btn-primary js-scale-submit" type="submit">Next Scale</button>
-        </form>
-    </div>
+    <form class="m-8" action="/practice" method="post">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+        <div id="submit-scale">
+            <button
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="submit">Start</button>
+        </div>
+    </form>
 </div>
 {% endblock %}
-
-{%  block scripts %}
-    <script src="{{ url_for('.static', filename='scales.js') }}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript">
-        $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-    </script>
-    {{ super() }}
-{%  endblock %}
