Add register styling

--- a/scales/templates/login.html
+++ b/scales/templates/login.html
@@ -41,6 +41,6 @@
                 New User? <a class="hover:text-blue-500" href="{{ url_for('register') }}">Register!</a>
             </p>
         </form>
-        </form>
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
