--- a/scales/templates/about.html
+++ b/scales/templates/about.html
@@ -11,7 +11,7 @@
 
     <div class="mt-6">
         <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-            href="{{ url_for('login') }}">Login</a>
+            href="{{ url_for('login') }}">Sign in</a>
         <p class="m-2">or</p>
         <a class="m-2 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
             href="{{ url_for('register') }}">Register</a>
