--- a/scales/templates/navbar.html
+++ b/scales/templates/navbar.html
@@ -2,7 +2,7 @@
     <ul class="flex justify-between text-md mx-auto max-w-screen-lg">
         <div>
             <li class="m-2">
-                <a class="navbar-brand custom-font-scales font-bold text-2xl" href="{{ url_for('about') }}">Scales</a>
+                <a class="navbar-brand custom-font-scales font-bold text-2xl" href="{{ url_for('index') }}">Scales</a>
             </li>
         </div>
         <div class="flex">
@@ -14,10 +14,10 @@
             {% endif %}
             <li class="m-auto mr-3 align-middle">
                 {% if current_user.is_anonymous and request.endpoint != 'login' %}
-                <a class="text-gray-300 hover:text-gray-100" href="{{ url_for('login') }}">Login</a>
+                <a class="text-gray-300 hover:text-gray-100" href="{{ url_for('login') }}">Sign in</a>
                 {% endif %}
                 {% if not current_user.is_anonymous %}
-                <a class="text-gray-300 hover:text-gray-100" href="{{ url_for('logout') }}">Logout</a>
+                <a class="text-gray-300 hover:text-gray-100" href="{{ url_for('logout') }}">Sign out</a>
                 {% endif %}
             </li>
         </div>
