--- a/scales/templates/register.html
+++ b/scales/templates/register.html
@@ -1,40 +1,53 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Register</h1>
-<div class="row">
-    <div class="col-md-4">
-        <form action="" method="post">
+<div class="container w-screen mx-auto mt-10">
+    <h1 class="text-3xl text-gray-800 font-bold text-center">Register</h1>
+    <div class="w-full max-w-xs m-auto">
+        <form action="" method="post" class="bg-white px-8 pt-6 pb-8 mb-4">
             {{ form.csrf_token }}
-            <p>
-                {{ form.username.label }}
-                {{ form.username(size=32) }}
+            <div class="mb-4">
+                {{ form.username.label(class_="block text-gray-700 text-sm font-bold mb-2") }}
+                {{ form.username(size=32, class_="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
+                leading-tight focus:outline-none focus:shadow-outline", placeholder="Username") }}
                 {% for error in form.username.errors %}
-                <span style="color: red;">[{{ error }}]</span>
+                <p class="mt-3 text-red-500 text-xs italic">[{{ error }}]</p>
                 {% endfor %}
-            </p>
-            <p>
-                {{ form.email.label }}<br>
-                {{ form.email(size=32) }}
+            </div>
+            <div class="mb-4">
+                {{ form.email.label(class_="block text-gray-700 text-sm font-bold mb-2") }}
+                {{ form.email(size=32, class_="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
+                leading-tight focus:outline-none focus:shadow-outline", placeholder="Email") }}
                 {% for error in form.email.errors %}
-                <span style="color: red;">[{{ error }}]</span>
+                <p class="mt-3 text-red-500 text-xs italic">[{{ error }}]</p>
                 {% endfor %}
-            </p>
-            <p>
-                {{ form.password.label }}<br>
-                {{ form.password(size=32) }}
+            </div>
+            <div class="mb-6">
+                {{ form.password.label(class_="block text-gray-700 text-sm font-bold mb-2") }}
+                {{ form.password(size=32, class_="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
+                leading-tight focus:outline-none focus:shadow-outline", placeholder="******************") }}
                 {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
+                <p class="mt-3 text-red-500 text-xs italic">{{ error }}</p>
                 {% endfor %}
-            </p>
-            <p>
-                {{ form.password2.label }}<br>
-                {{ form.password2(size=32) }}
+            </div>
+            <div class="mb-6">
+                {{ form.password2.label(class_="block text-gray-700 text-sm font-bold mb-2") }}
+                {{ form.password2(size=32, class_="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
+                leading-tight focus:outline-none focus:shadow-outline", placeholder="******************") }}
                 {% for error in form.password2.errors %}
-                <span style="color: red;">[{{ error }}]</span>
+                <p class="mt-3 text-red-500 text-xs italic">{{ error }}</p>
                 {% endfor %}
+            </div>
+            <div class="flex items-center justify-between">
+                <button
+                    class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                    type="submit">
+                    Register
+                </button>
+            </div>
+            <p class="block text-gray-700 text-sm font-bold mt-3 text-center">
+                Already have an account? <a class="hover:text-blue-500" href="{{ url_for('login') }}">Sign in</a>
             </p>
-            <p>{{ form.submit() }}</p>
         </form>
     </div>
 </div>
